# ml-notebook

./: .gitignore  README.md  pyproject.toml  resources.ipynb
1-introduction/: 1 - Distributions and Sampling in PyTorch.ipynb  1 -extended.ipynb  2 - A Basic Statistical Model in PyTorch.ipynb  2 -extended.ipynb  3 - Tensors in pytorch.ipynb  3 -extended.ipynb
2-First example/: 1 - Regresion and clasiffication.ipynb  2 - Loss function in Pytorch.ipynb  2 -exgended.ipynb  3 - Optimization.ipynb  4 - Computation Graphs in PyTorch.ipynb  4 -extended.ipynb  5 - Linear Regression in PyTorch.ipynb  6 - Binary Logistic Regression in PyTorch.ipynb  6 -extended.ipynb  7 - Multi-Class Logistic Regression in PyTorch.ipynb  7 -extended.ipynb
3-Deep Netwoks/: 2 - Loss functions.ipynb  3 - Sthocastic Gradient Descent.ipynb  4 - Stochastic Gradient Descent in PyTorch.ipynb  4 -extended.ipynb  5 - Training a Deep Network in PyTorch.ipynb  7 - Deep Networks in PyTorch.ipynb  7 - extended.ipynb  8 - A Practical Guide to Deep Network Design.ipynb
4-Residuals and Normalizations/: 1 - Vanishing and Exploding Gradients.ipynb  2 - Normalizations.ipynb  3 - Normalization in PyThorh.ipynb  5 - Residual Connections in PyTorch.ipynb
5-Convolution/: 3 - Convolutions in PyTorch.ipynb  6 - Convolutional Networks in PyTorch.ipynb  convolutions.ipynb  upconvolutions.ipynb
6-Transformers/: 2-Multi-Head Attention.ipynb  3-Multi-Head_Attention_in_Pytorch.ipynb  4-Attention_invariances.ipynb  5-Positional_Embeddings_in_PyTorch.ipynb  7-The_Transformer_Architecture_in_PyTorch.ipynb  extended.py  (+4 more)
(+96 files in other folders)
